--- a/snw/templates/snw/schedule.html
+++ b/snw/templates/snw/schedule.html
@@ -6,8 +6,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
             crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     {% load static %}
+    <link rel="shortcut icon" type="image/png" href="{% static 'snw icon.png' %}"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     {% load snw_extras %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
