--- a/static/sets/css/style.css
+++ b/static/sets/css/style.css
@@ -1,9 +1,15 @@
 .responsive_text {
     font-size: 1.5vw;
 }
+.responsive_text_times {
+    font-size: 1vw;
+}
 
 @media only screen and (max-width: 1000px) {
     .responsive_text {
-        font-size: 2.5vw;
+        font-size: 2vw;
+    }
+    .responsive_text_times {
+        font-size: 2vw;
     }
 }
