--- a/sets/templates/sets/schedule.html
+++ b/sets/templates/sets/schedule.html
@@ -132,7 +132,7 @@
         <div style="text-align: center;">
             Share Link: <a href='javascript:copy_bits()' id="share_link" class="btn button" type="button"></a>
         </div>
-        <div class="row gx-2">
+        <div class="row gx-1">
             <div style="background-origin: padding-box;" class="col-{{ colsize }}">
                 &nbsp;
             </div>
@@ -146,7 +146,7 @@
         </div>
 
         {% for time, stage in times.items %}
-            <div class="row gx-2" style="height: 1.5em;">
+            <div class="row gx-1" style="height: 1.5em;">
                 <div class="col-{{ colsize }}" style="height: 100%">
                     <div class="responsive_text_times" style="text-align: center; border-top: 1px dotted darkgrey; overflow: visible; word-break: keep-all; white-space: nowrap">
                         {{ time|date:'h:i A' }}
@@ -162,7 +162,7 @@
                         {% if band.name %} onclick="javascript:select('{{ band.name|cut:' ' }}')" {% endif %}
                         >
                         {% if band.position == "middle" %}
-                        <span class="responsive_text" style="width: 100%; z-index: 10; text-align: center; position: absolute; padding: 4px; overflow-y: visible; background: none"><span style="width: 100%; padding: 4px; background-color: {{ text.background }}; border-radius: 5px; display: block;">{{ band.name }}</span></span> <span style="position:relative;"></span>
+                        <span class="responsive_text" style="width: 100%; z-index: 10; text-align: center; position: absolute; padding: 4px; overflow-y: visible; background: none; word-break:normal;"><span style="width: 100%; padding: 4px; background-color: {{ text.background }}; border-radius: 5px; display: block;">{{ band.name }}</span></span> <span style="position:relative;"></span>
                         {% comment %} {% elif band.position == "bottom" %} <span style="font-size: small"> {{ band.period }} </span> {% endcomment %}
                         {% endif %}
                         &nbsp;
