--- a/sets/templates/sets/schedule.html
+++ b/sets/templates/sets/schedule.html
@@ -23,6 +23,10 @@
             margin-bottom: 3px;
         }
     </style>
+    <meta property="og:title" content="{{ text.title }}" />
+    <meta property="og:description" content="Pick the bands you want to see" />
+    <meta property="og:image" content="{% static preview_image %}" />
+    <title>Unofficial {{ text.title }}</title>
 </head>
 <body>
     <script>
@@ -125,7 +129,7 @@
     </div>
     <div class="container" style="flex-flow: row wrap; margin-top: 20px">
         <h5 class="card-title display-5">
-            {{ text.title|safe }}
+            <span style="font-size:smaller">(Unofficial)</span> {{ text.title }}
         </h5>
         {{ text.subtitle|safe }}
         <br>
