--- a/sets/templates/sets/schedule.html
+++ b/sets/templates/sets/schedule.html
@@ -25,7 +25,7 @@
     </style>
     <meta property="og:title" content="{{ text.title }}" />
     <meta property="og:description" content="Pick the bands you want to see" />
-    <meta property="og:image" content="{% static preview_image %}" />
+    <meta property="og:image" content="{{ preview_image }}" />
     <title>Unofficial {{ text.title }}</title>
 </head>
 <body>
