Link to home page

--- a/sets/templates/sets/schedule.html
+++ b/sets/templates/sets/schedule.html
@@ -134,6 +134,7 @@
         </h5>
         {{ text.subtitle|safe }}
         <br>
+        <a href="/" class="button">All Festivals</a>
         <div style="text-align: center;">
             Share Link: <a href='javascript:copy_bits()' id="share_link" class="btn button" type="button"></a>
         </div>
