--- a/sets/templates/sets/schedule.html
+++ b/sets/templates/sets/schedule.html
@@ -163,7 +163,7 @@
                         {% if band.name %} onclick="javascript:select('{{ band.name|cut:' ' }}')" {% endif %}
                         >
                         {% if band.position == "middle" %}
-                        <span class="responsive_text" style="width: 100%; z-index: 10; text-align: center; position: absolute; padding: 7px; overflow-y: visible; background: none; word-break:normal;"><span style="padding: 7px; background-color: {{ text.background }}; border-radius: 5px;">{{ band.name }}</span></span> <span style="position:relative;"></span>
+                        <span class="responsive_text" style="width: 100%; z-index: 10; text-align: center; position: absolute; padding: 3px; line-height: 1.5em; overflow-y: visible; background: none; word-break:normal; background-color: {{ text.background }};">{{ band.name }}</span> <span style="position:relative;"></span>
                         {% comment %} {% elif band.position == "bottom" %} <span style="font-size: small"> {{ band.period }} </span> {% endcomment %}
                         {% endif %}
                         &nbsp;
