--- a/sets/templates/sets/schedule.html
+++ b/sets/templates/sets/schedule.html
@@ -50,7 +50,7 @@
             for (let ele of document.getElementsByClassName("band")) {
                 ele.style.borderWidth=1;
                 ele.style.borderColor="{{ text.lines }}";
-                ele.style.backgroundColor="{{ text.background }}";
+                ele.style.backgroundColor="{{ text.set_background }}";
             }
             for (let band of selected_bands) {
                 for (let ele of document.getElementsByClassName("band_" + band)) {
@@ -166,7 +166,7 @@
                         {% if band.name %} onclick="javascript:select('{{ band.name|cut:' ' }}')" {% endif %}
                         >
                         {% if band.position == "middle" %}
-                        <span class="responsive_text" style="width: 100%; z-index: 10; text-align: center; position: absolute; padding: 3px; line-height: 1.5em; overflow-y: visible; background: none; word-break:normal; background-color: {{ text.background }};">{{ band.name }}</span> <span style="position:relative;"></span>
+                        <span class="responsive_text" style="width: 100%; z-index: 10; text-align: center; position: absolute; padding: 3px; line-height: 1.5em; overflow-y: visible; background: none; word-break:normal; background-color: {{ text.set_background }};">{{ band.name }}</span> <span style="position:relative;"></span>
                         {% comment %} {% elif band.position == "bottom" %} <span style="font-size: small"> {{ band.period }} </span> {% endcomment %}
                         {% endif %}
                         &nbsp;
